--- a/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj
+++ b/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj
@@ -143,11 +143,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CustomerItem.h" />
+    <ClInclude Include="CustomerOrder.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemManager.h" />
+    <ClInclude Include="OrderManager.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="TaskManager.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CustomerItem.cpp" />
+    <ClCompile Include="CustomerOrder.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemManager.cpp" />
+    <ClCompile Include="OrderManager.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="TaskManager.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
