--- a/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj
+++ b/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="OrderManager.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="TaskManager.cpp" />
     <ClCompile Include="Utilities.cpp" />
