--- a/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj.filters
+++ b/Order-Assembly-Line/Order-Assembly-Line/Order-Assembly-Line.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="TaskManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
